#456
increase permsize


Former-commit-id: 05917ea33876e82cadac4140d437b00fca814db0